css/main.css
html {
  font-family: "Open Sans", sans-serif;
}

h1 {
  text-transform: capitalize;
  font-weight: 300;
  color: #59bf8e;
  font-size: 1.6rem;
}

hr {
  color: #59bf8e;
}

a, .btn, .btn-ghost{
  text-decoration: none;
  color: #333333;
  border: 0;
  background-color: white;
}

a:hover, .btn:hover, .btn-ghost:hover{
  text-decoration: none;
  color: #59bf8e;
  border: 0;
  background-color: white;
}

@media only screen and (min-width: 25em) {
  h1 {
    font-size: 2.6rem;
    line-height: 1.38114734;
  }
}

@media only screen and (min-width: 38em) {
  h1 {
    font-size: 3.6rem;
    line-height: 1.38114734;
  }
}

@media only screen and (min-width: 60em) {
  h1 {
    font-size: 4.31rem;
    line-height: 1.38114734;
  }
}

@media only screen and (min-width: 80em) {
  h1 {
    font-size: 5.1rem;
    line-height: 1.38114734;
  }
}

